--- a/_includes/bookmarks-overview.njk
+++ b/_includes/bookmarks-overview.njk
@@ -1,9 +1,8 @@
 ---
+  layout: overview.njk
   stylesheets:
     - components/bookmark-filter/bookmark-filter.css
 ---
-
-{% extends './overview.njk' %}
 
 {% block filters %}
   {% include 'components/bookmark-filter/bookmark-filter.njk' %}
