--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -4,7 +4,7 @@
 @import "./typography.css";
 @import "./helpers.css";
 @import "./core.css";
-@import './pages/contact.css';
-@import '../components/footer/footer.css';
-@import '../components/header/header.css';
-@import '../components/sociallinks/sociallinks.css';
+@import "./pages/contact.css";
+@import "../components/footer/footer.css";
+@import "../components/header/header.css";
+@import "../components/sociallinks/sociallinks.css";
