Remove list styles in footer

--- a/_includes/components/footer/footer.njk
+++ b/_includes/components/footer/footer.njk
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<div class="content-section">
-    <nav aria-labelledby="footer-other-pages-nav">
+    <nav class="footer__other-nav" aria-labelledby="footer-other-pages-nav">
       <span id="footer-other-pages-nav" class="visuallyhidden">Other pages</span>
       <ul>
         <li><a href="/bookmarks">Bookmarks</a></li>
