--- a/_includes/css/core.css
+++ b/_includes/css/core.css
@@ -26,12 +26,12 @@ main {
   margin-top: 0;
 }
 
-.hljs-wrapper {
+pre.hljs-block {
 	position: relative;
 	margin-bottom: var(--line-height);
 }
 
-.hljs-wrapper:before {
+pre.hljs-block:before {
 	content: '';
 	position: absolute;
 	background-color: var(--code-background);
@@ -41,12 +41,14 @@ main {
 	transform: translateX(-50%);
 	max-width: 100vw;
 
-	@media screen and (min-width: var(--screen-small)) {
-		max-width: 95vw;
-	}
+}
+@media screen and (min-width: var(--screen-small)) {
+  pre.hljs-block:before {
+    max-width: 95vw;
+  }
 }
 
-.hljs {
+code.hljs-block {
 	position: relative;
 	background-color: var(--code-background);
 	padding-top: var(--line-height);
