--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -55,7 +55,7 @@
 
     <link rel="stylesheet" href="/styles/markdown-decorations.css">
 
-    {% if not process.env.DEVELOPMENT %}
+    {% if process.env.DEVELOPMENT !== "true" %}
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45961555-1"></script>
 		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-45961555-1');</script>
     <script type="module">
