--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -3,33 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title>{% if page.url === '/'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ title }} | {{ site.title }}{% endif %}</title>
-    
+
     <link rel="manifest" href="/manifest.json">
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <link rel="shortcut icon" href="{% imageUrl '_assets/logo.svg', 32, 'png' %}" />
     <link rel="apple-touch-icon" href="{% imageUrl '_assets/logo.svg', 192, 'png' %}">
-    
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    
+
     <meta name="theme-color" content="{{ site.themeColor }}">
     <meta name="description" content="{{ description }}">
-    
+    <meta name="author" content="{{ author }}">
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="{{ socialLinks.twitter.username }}">
     <meta name="twitter:title" content="{% if page.url === '/'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ title }} | {{ site.title }}{% endif %}">
     <meta name="twitter:description" content="{{ description }}">
     <meta name="twitter:image" content="{% if page.featuredimage %}{{ site.url }}{{ page.url }}{{ page.featuredimage}}{% else %}{{ site.gravatar }}{% endif %}">
-    <meta name="twitter:image:alt" content="{% if page.featuredimage %}{{ page.featuredimageAlt }}{% else %}Close up of my face{% endif %}">
-    
+    <meta name="twitter:image:alt" content="{% if page.featuredimage %}{{ page.featuredimageAlt }}{% else %}My avatar on the web whicht is a close up of my face{% endif %}">
+    <meta name="twitter:creator" content="@petergoes">
+    <meta name="twitter:site" content="@petergoes">
+
     <meta property="og:site_name" content="{{ site.name }}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:title" content="{% if page.url === '/'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ title }} | {{ site.title }}{% endif %}">
     <meta property="og:type" content="article">
     <meta property="og:image" content="{% if page.featuredimage %}{{ site.url }}{{ page.url }}{{ page.featuredimage}}{% else %}{{ site.gravatar }}{% endif %}">
-    
+
     <meta name="google-site-verification" content="nqrUK41xnH-Xy6jkKrFZaB7WepOc-53Nein0KOSwizo" />
 
     {% if page.tags.length > 0 %}
@@ -51,7 +54,7 @@
     </main>
 
     {% block footer %}{% endblock%}
-    
+
     <div class="debug-vertical-rythm"></div>
 
     <link rel="stylesheet" href="/styles/markdown-decorations.css">
