--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -32,10 +32,7 @@
     <meta property="og:title" content="{% if page.url === '/'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ title }} | {{ site.title }}{% endif %}">
     <meta property="og:image" content="{% if page.featuredimage %}{{ site.url }}{{ page.url }}{{ page.featuredimage}}{% else %}{{ site.gravatar }}{% endif %}">
     <meta property="og:type" content="{{ og.type }}">
-    {% if og.type === "article" %}
-      <meta property="article:published_time" content="{{ page.date }}">
-      <meta property="article:author" content="{{ author }}">
-    {% endif %}
+    <meta property="og:publish_date" content="{{ page.date | dateToRfc3339 }}">
 
     <meta name="google-site-verification" content="nqrUK41xnH-Xy6jkKrFZaB7WepOc-53Nein0KOSwizo" />
 
