Add link to bookmark feed

--- a/content/_files/bookmarks-rss.njk
+++ b/content/_files/bookmarks-rss.njk
@@ -31,7 +31,10 @@
     <link href="{{ post.data.url }}"/>
     <updated>{{ post.date | dateToRfc3339 }}</updated>
     <id>{{ absolutePostUrl }}</id>
-    <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
+    <content type="html">
+      {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
+      <a href="{{ post.data.url }}">Link to {{ post.data.title }}</a>
+    </content>
   </entry>
   {%- endfor %}
 </feed>
