--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -22,7 +22,7 @@
     <meta name="twitter:creator" content="{{ socialLinks.twitter.username }}">
     <meta name="twitter:title" content="{% if page.url === '/'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ title }} | {{ site.title }}{% endif %}">
     <meta name="twitter:description" content="{{ description }}">
-    <meta name="twitter:image" content="{% featuredImage page, title, true %}">
+    <meta name="twitter:image" content="{% featuredImage page, title, featuredImageFallback, category %}">
     <meta name="twitter:image:alt" content="Dark image with the text: {{ title }}" >
     <meta name="twitter:creator" content="@petergoes">
     <meta name="twitter:site" content="@petergoes">
@@ -31,7 +31,7 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:title" content="{% if page.url === '/'%}{{ site.title }} | {{ site.subtitle }}{% else %}{{ title }} | {{ site.title }}{% endif %}">
     <meta property="og:description" content="{{ description }}">
-    <meta property="og:image" content="{% featuredImage page, title, true %}">
+    <meta property="og:image" content="{% featuredImage page, title, featuredImageFallback, category %}">
     <meta property="og:type" content="{{ og.type }}">
     <meta property="og:publish_date" content="{{ page.date | dateToRfc3339 }}">
 
