--- a/_includes/overview.njk
+++ b/_includes/overview.njk
@@ -16,14 +16,14 @@
   {%- for post in collections[collection] | reverse -%}
     {% if post.url %}
     <article>
-      <h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
+      <h2><a href="{% if post.data.url %}{{ post.data.url }}{% else %}{{ post.url }}{% endif %}">{{ post.data.title }}</a></h2>
       {% if showDate %}
         <small>{{ post.date | formatDate }}</small>
       {% endif %}
       {% if post.data.excerpt %}
         <p>{{ post.data.excerpt }}</p>
       {% else %}
-        {# {{ post.data.content | safe }} #}
+        {{ post.templateContent | safe }}
       {% endif %}
     </article>
     {% endif %}
