--- a/_includes/bookmarks-overview.njk
+++ b/_includes/bookmarks-overview.njk
@@ -1,5 +1,6 @@
 ---
   layout: overview.njk
+  timeSeperatorFormat: DD-MM-YYYY
   stylesheets:
     - components/bookmark-filter/bookmark-filter.css
 ---
