--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -1,4 +1,6 @@
 ---
+  stylesheets:
+    - blog.css
   featuredImageFallback: false
   category: Blog
   og: 
@@ -8,12 +10,11 @@
 {% extends './page.njk' %}
 
 {% block content %}
-  <article>
+  <article class="blog">
         <header class="content-section">
                 <h1 class="{% if showPageTitle === false %}visuallyhidden{% endif %}">{{ title }}</h1>
                 <aside>
-                    {% if created_at %}<small>Created at: {{ created_at }}</small>{% endif %}
-                    {% if updated_at %}<small>Updated at: {{ updated_at }}</small>{% endif %}
+                    <small>Created at: {{ date | formatDate('Do of MMMM, YYYY') }}</small>
                 </aside>
         </header>
     <section class="content-section">  
