--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -10,15 +10,23 @@
 {% extends './page.njk' %}
 
 {% block content %}
-  <article class="blog">
-        <header class="content-section">
-                <h1 class="{% if showPageTitle === false %}visuallyhidden{% endif %}">{{ title }}</h1>
-                <aside>
-                    <small>Created at: {{ date | formatDate('Do of MMMM, YYYY') }}</small>
-                </aside>
-        </header>
-    <section class="content-section">  
+  <article class="blog content-section">
+    <header>
+            <h1 class="{% if showPageTitle === false %}visuallyhidden{% endif %}">{{ title }}</h1>
+            <aside>
+                <small>Created at: {{ date | formatDate('Do of MMMM, YYYY') }}</small>
+            </aside>
+    </header>
+    <section>
       {{ content | safe }}
     </section>
+
+    {% if tweetUrl %}
+    <footer aria-labelledby="comments">
+      <h2 id="comments">Comments</h2>
+      Do you have any comments? A proper comment secion is still being constructed, but you
+      can let me know what you think about it on Twitter under <a href="{{ tweetUrl }}">this tweet</a>!
+    </footer>
+    {% endif %}
   </article>
 {% endblock %}
