--- a/_includes/css/reset.css
+++ b/_includes/css/reset.css
@@ -19,8 +19,8 @@ b, i,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
+article, aside, canvas, figcaption, figure, 
+footer, header, hgroup, menu, nav, section,
 time, mark, audio, video {
     margin:0;
     padding:0;
