--- a/_includes/components/tag/tag.njk
+++ b/_includes/components/tag/tag.njk
@@ -1,8 +1,8 @@
-{% macro tag(tagName, tagSlug) %}
+{% macro tag(item) %}
   <a
     class="tag"
-    href="?tag={{ tagSlug }}"
+    href="?tag={{ item.slug }}"
   >
-    {{ tagName }}
+    {{ item.label }}
   </a>
 {% endmacro %}
