Add taglist to bookmarks

--- a/_includes/bookmarks-overview.njk
+++ b/_includes/bookmarks-overview.njk
@@ -16,7 +16,8 @@
   {{
     tagList(
       collections.bookmark | tagsInCollection('bookmark'),
-      tag
+      tag,
+      "bookmarks"
     )
   }}
 
