--- a/_includes/components/tag-list/tag-list.css
+++ b/_includes/components/tag-list/tag-list.css
@@ -1,3 +1,16 @@
+.tag-list {
+  min-height: var(--line-height);
+  display: block;
+}
+
+.tag-list details {
+  display: none;
+}
+
+.tag-list--show details {
+  display: initial;
+}
+
 .tag-list__list {
   display: flex;
   flex-wrap: wrap;
