--- a/_includes/components/bookmark-filtered-list/bookmark-filtered-list.css
+++ b/_includes/components/bookmark-filtered-list/bookmark-filtered-list.css
@@ -3,6 +3,7 @@ my-bookmark-filtered-list {
   margin-top: var(--line-height);
 }
 
+/*! purgecss ignore */
 .bookmark-filtered-list__item {
   display: flex;
   flex-direction: column;
