--- a/content/_files/bookmark-filtered.njk
+++ b/content/_files/bookmark-filtered.njk
@@ -10,7 +10,7 @@
 <my-bookmark-filtered-list root="bookmarks"></my-bookmark-filtered-list>
 
 <script id="bookmarks-tags--json-content" type="module">
-  window.bookmarks = [{% for post in collections.bookmark -%}
+  window.bookmarks = [{% for post in collections.bookmark | reverse -%}
       {% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
       {% raw %}{{% endraw %}
         "title": {{ post.data.title | dump | safe }},
