--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -55,6 +55,8 @@
       {% block content %}{% endblock %}
     </main>
 
+    {% block aside %}{% endblock %}
+
     {% block footer %}{% endblock%}
 
     <div class="debug-vertical-rythm"></div>
