--- a/_includes/home.njk
+++ b/_includes/home.njk
@@ -22,3 +22,11 @@
     </div>
   </article>
 {% endblock %}
+
+{% block aside %}
+  <hr class="content-section"/>
+  <aside class="content-section">
+    <h2>This is me</h2>
+    {% include './components/h-card/h-card.njk' %}
+  </aside>
+{% endblock %}
