--- a/_includes/css/reset.css
+++ b/_includes/css/reset.css
@@ -97,7 +97,8 @@ hr {
     height:1px;
     border:0;   
     border-top:1px solid #cccccc;
-    margin:1em 0;
+    margin-top: 0.85rem;
+    margin-bottom: 0.85rem;
     padding:0;
 }
 
