--- a/_includes/components/h-card/h-card.njk
+++ b/_includes/components/h-card/h-card.njk
@@ -8,13 +8,17 @@
     height="112"
   />
   <div>
-    <a rel="me" class="u-url u-uid" href="https://www.petergoes.nl">
-      <span class="p-name">
-        <span class="p-given-name">Peter</span>
-        <span class="p-family-name">Goes</span>
-      </span>
-    </a>
-    <p><span class="p-locality">Amsterdam</span>, <span class="p-country-name">The Netherlands</span></p>
+    <p>
+      <a rel="me" class="u-url u-uid" href="https://www.petergoes.nl">
+        <span class="p-name">
+          <span class="p-given-name">Peter</span>
+          <span class="p-family-name">Goes</span>
+        </span>
+      </a>
+      &nbsp;
+      <span class="p-locality">Amsterdam</span>, <span class="p-country-name">The Netherlands</span>
+    </p>
+    <p class="p-note">Open web enthousiast</p>
     <p><span class="p-job-title">Front-end developer</span> @ <a class="p-org" href="https://www.voorhoede.nl">De Voorhoede</a>
   </div>
 </div>
