--- a/_includes/components/h-card/h-card.njk
+++ b/_includes/components/h-card/h-card.njk
@@ -9,12 +9,7 @@
   />
   <div>
     <p>
-      <a rel="me" class="u-url u-uid" href="https://www.petergoes.nl">
-        <span class="p-name">
-          <span class="p-given-name">Peter</span>
-          <span class="p-family-name">Goes</span>
-        </span>
-      </a>
+      <a rel="me" class="u-url u-uid" href="https://www.petergoes.nl"><span class="p-name"><span class="p-given-name">Peter</span> <span class="p-family-name">Goes</span></span></a>
       &nbsp;
       <span class="p-locality">Amsterdam</span>, <span class="p-country-name">The Netherlands</span>
     </p>
