--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -16,7 +16,7 @@
       <aside>
           <small>
             Created at:
-            <time class="dt-published" datetime="{{ date | formatDate('YYYY-MM-DD HH:MM') }}">
+            <time class="dt-published" datetime="{{ date | formatDate('YYYY-MM-DD hh:mm:ss') }}">
               {{ date | formatDate('Do of MMMM, YYYY') }}
             </time>
           </small>
