Add syndication class to tweet link

--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -41,7 +41,7 @@
     <footer aria-labelledby="comments">
       <h2 id="comments">Comments</h2>
       Do you have any comments? A proper comment secion is still being constructed, but you
-      can let me know what you think about it on Twitter under <a href="{{ tweetUrl }}">this tweet</a>!
+      can let me know what you think about it on Twitter under <a rel="syndication" class="u-syndication" href="{{ tweetUrl }}">this tweet</a>!
     </footer>
     {% endif %}
 
