Add author to blog

--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -47,7 +47,8 @@
 
     <aside>
       <h2>About me</h2>
-      {% include './components/h-card/h-card.njk' %}
+      {% from './components/h-card/h-card.njk' import hCard %}
+      {{ hCard(site.gravatar, 'author') }}
     </aside>
   </article>
 
