--- a/_includes/components/h-card/h-card.njk
+++ b/_includes/components/h-card/h-card.njk
@@ -1,15 +1,21 @@
+{% macro hCard(img, _rel) %}
+{% set rel = me %}
+{% if _rel %}
+{% set rel = _rel %}
+{% endif %}
+
 <div class="h-card">
   <img
     rel="me"
     class="u-photo"
-    src="{{ site.gravatar }}"
+    src="{{ img }}"
     alt="Closeup of my face in black and white"
     width="112"
     height="112"
   />
   <div>
     <p>
-      <a rel="me" class="u-url u-uid" href="https://www.petergoes.nl"><span class="p-name"><span class="p-given-name">Peter</span> <span class="p-family-name">Goes</span></span></a>
+      <a rel="{{ rel }}" class="{% if _rel === 'author' %}p-author {% endif %}u-url u-uid" href="https://www.petergoes.nl"><span class="p-name"><span class="p-given-name">Peter</span> <span class="p-family-name">Goes</span></span></a>
       &nbsp;
       <span class="p-locality">Amsterdam</span>, <span class="p-country-name">The Netherlands</span>
     </p>
@@ -17,3 +23,4 @@
     <p><span class="p-job-title">Front-end developer</span> @ <a class="p-org" href="https://www.voorhoede.nl">De Voorhoede</a>
   </div>
 </div>
+{% endmacro %}
