make header link span on home page

--- a/_includes/components/h-card/h-card.njk
+++ b/_includes/components/h-card/h-card.njk
@@ -4,7 +4,7 @@
 {% set rel = _rel %}
 {% endif %}
 
-<div class="h-card">
+<div class="h-card h-card-full">
   <img
     rel="me"
     class="u-photo"
