--- a/_includes/components/h-card/h-card.css
+++ b/_includes/components/h-card/h-card.css
@@ -1,15 +1,15 @@
-.h-card {
+.h-card-full {
   width: 100%;
   display: grid;
   grid-template-columns: auto 1fr;
   column-gap: 1rem;
 }
 
-.h-card img{
+.h-card-full img{
   width: initial;
   border-radius: 100%;
 }
 
-.h-card p:not(:nth-child(2)) {
+.h-card-full p:not(:nth-child(2)) {
   margin-bottom: 0;
 }
