--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -31,6 +31,7 @@
           <small>
             <a class="u-url"  href="{{ page.url }}">permalink<span class="visuallyhidden"> to this post</span></a>
           </small>
+          <span class="visuallyhidden">published by <a class="p-author h-card" href="https://www.petergoes.nl">me</a></span>
       </aside>
     </header>
     <section class="e-content">
