--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -44,6 +44,10 @@
     {% block head %}
     {% endblock %}
 
+    <link rel="webmention" href="https://webmention.io/www.petergoes.nl/webmention" />
+    <link rel="pingback" href="https://webmention.io/www.petergoes.nl/xmlrpc" />
+
+
     <script type="module" src="/_includes/scripts.js" async></script>
     <style>{% postcss stylesheets, page.outputPath, process.env.DEVELOPMENT === 'true' %}</style>
   </head>
