Add likes to blog posts

--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -42,6 +42,9 @@
       <h2 id="comments">Comments</h2>
       Do you have any comments? A proper comment secion is still being constructed, but you
       can let me know what you think about it on Twitter under <a rel="syndication" class="u-syndication" href="{{ tweetUrl }}">this tweet</a>!
+      {% from './components/webmentions/interaction.njk' import interaction %}
+      {% set webmentionsForUrl = webmentions | getWebmentionsForUrl(site.url + page.url) %}
+      {{ interaction(['like-of', 'repost-of'], 'Like', 'Likes and reposts', webmentionsForUrl) }}
     </footer>
     {% endif %}
 
