--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -10,3 +10,4 @@
 @import "../components/h-card/h-card.css";
 @import "../components/header/header.css";
 @import "../components/sociallinks/sociallinks.css";
+@import "../components/webmentions/interaction.css";
