Update header author name

--- a/_includes/components/header/header.njk
+++ b/_includes/components/header/header.njk
@@ -6,7 +6,7 @@
   {% else %}
     <span class="page-header__link" aria-label="Peter Goes, Front-end Developer home page">
   {% endif %}
-      <span class="page-header__name"><span class="page-header__code-decoration" aria-hidden="true" role="presentation" tabindex="-1">.</span>peter-goes</span> <span class="page-header__code-decoration" aria-hidden="true" role="presentation">{</span> 
+      <span class="page-header__name"><span class="page-header__code-decoration" aria-hidden="true" role="presentation" tabindex="-1">.</span><span class="p-given-name">peter</span>-<span class="p-family-name">goes</span></span> <span class="page-header__code-decoration" aria-hidden="true" role="presentation">{</span> 
         <span class="page-header__occupation">
           <span class="page-header__property">frontEnd</span><span class="page-header__code-decoration" aria-hidden="true" role="presentation">:</span> <span class="page-header__property--value">developer</span><span class="page-header__code-decoration" aria-hidden="true" role="presentation">;&nbsp;</span>
         </span>
