--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -11,6 +11,7 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <link rel="shortcut icon" href="{% imageUrl '_assets/logo.svg', 32, 'png' %}" />
     <link rel="apple-touch-icon" href="{% imageUrl '_assets/logo.svg', 192, 'png' %}">
+    <link rel="feed" href="/blog" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
