Display webmention replies

--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -43,8 +43,10 @@
       Do you have any comments? A proper comment secion is still being constructed, but you
       can let me know what you think about it on Twitter under <a rel="syndication" class="u-syndication" href="{{ tweetUrl }}">this tweet</a>!
       {% from './components/webmentions/interaction.njk' import interaction %}
+      {% from './components/webmentions/replies.njk' import replies %}
       {% set webmentionsForUrl = webmentions | getWebmentionsForUrl(site.url + page.url) %}
       {{ interaction(['like-of', 'repost-of'], 'Like', 'Likes and reposts', webmentionsForUrl) }}
+      {{ replies(webmentionsForUrl) }}
     </footer>
     {% endif %}
 
