--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -11,3 +11,4 @@
 @import "../components/header/header.css";
 @import "../components/sociallinks/sociallinks.css";
 @import "../components/webmentions/interaction.css";
+@import "../components/webmentions/replies.css";
