--- a/_includes/blog.css
+++ b/_includes/blog.css
@@ -7,7 +7,7 @@
 }
 
 .blog footer {
-  margin-top: calc(var(--line-height) * 2);
+  margin-top: calc(calc(var(--line-height) * 2) - 1px);
   border-top: 1px solid var(--default-text-color-50);
 }
 
