Add response form

--- a/_includes/blog.njk
+++ b/_includes/blog.njk
@@ -37,11 +37,25 @@
       {{ content | safe }}
     </section>
 
-    {% if tweetUrl %}
     <footer aria-labelledby="comments">
       <h2 id="comments">Comments</h2>
-      Do you have any comments? A proper comment secion is still being constructed, but you
-      can let me know what you think about it on Twitter under <a rel="syndication" class="u-syndication" href="{{ tweetUrl }}">this tweet</a>!
+
+      <p>
+        I use <a href="https://indieweb.org/Webmention">WebMentions</a> via the <a href="https://indieweb.org">IndyWeb</a>. Do you have a comment?
+        {% if tweetUrl %}
+          <br />Reply on twitter under <a rel="syndication" class="u-syndication" href="{{ tweetUrl }}">this tweet</a>. Or
+        {% else %}
+          <br />Please
+        {% endif %}
+        respond via a post from your site!
+      </p>
+      <form class="webmentions-response-form" action="https://webmention.io/petergoes.nl/webmention" method="POST">
+        <label for="webmentions-response-form-input">Url of your response</label>
+        <input id="webmentions-response-form-input" type="url" name="source" placeholder="https://example.com/" required />
+        <input type="hidden" name="target" value="{{ site.url + page.url }}" />
+        <button type="submit">Send response</button> 
+      </form>
+
       {% from './components/webmentions/interaction.njk' import interaction %}
       {% from './components/webmentions/text-responses.njk' import textResponses %}
       {% set webmentionsForUrl = webmentions | getWebmentionsForUrl(site.url + page.url) %}
@@ -49,7 +63,6 @@
       {{ textResponses('in-reply-to', 'Reply', 'Replies', webmentionsForUrl) }}
       {{ textResponses('mention-of', 'Mention', 'Mentions', webmentionsForUrl) }}
     </footer>
-    {% endif %}
 
     <aside aria-labelledby="this-is-me">
       <h2 id="this-is-me">This is me</h2>
