--- a/content/_files/replies-rss.njk
+++ b/content/_files/replies-rss.njk
@@ -27,10 +27,11 @@
   {% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
   <entry>
     <title>{{ post.data.title }}</title>
-    <link href="{{ post.data.url }}"/>
+    <link href="https://www.petergoes.nl{{ absolutePostUrl }}"/>
     <updated>{{ post.date | dateToRfc3339 }}</updated>
     <id>{{ absolutePostUrl }}</id>
     <content type="html">
+      <a href="{{ post.data.url }}">Target</a>
       {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
     </content>
   </entry>
