--- a/_includes/_base.njk
+++ b/_includes/_base.njk
@@ -45,8 +45,8 @@
     {% block head %}
     {% endblock %}
 
-    <link rel="webmention" href="https://webmention.io/www.petergoes.nl/webmention" />
-    <link rel="pingback" href="https://webmention.io/www.petergoes.nl/xmlrpc" />
+    <link rel="webmention" href="https://webmention.io/petergoes.nl/webmention" />
+    <link rel="pingback" href="https://webmention.io/petergoes.nl/xmlrpc" />
 
 
     <script type="module" src="/_includes/scripts.js" async></script>
