--- a/content/_files/replies-rss.njk
+++ b/content/_files/replies-rss.njk
@@ -29,10 +29,12 @@
     <title>{{ post.data.title }}</title>
     <link href="https://www.petergoes.nl{{ absolutePostUrl }}"/>
     <updated>{{ post.date | dateToRfc3339 }}</updated>
-    <id>{{ absolutePostUrl }}</id>
+    <id>https://www.petergoes.nl{{ absolutePostUrl }}</id>
     <content type="html">
-      {{ '<a href="' }}{{ post.data.url }}{{' ">Target</a>'}}
-      {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
+      {{ '<div>' }}
+        {{ '<a href="' }}{{ post.data.url }}{{' ">Target</a>'}}
+        {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
+      {{ '</div>' }}
     </content>
   </entry>
   {%- endfor %}
