--- a/_includes/reply.njk
+++ b/_includes/reply.njk
@@ -29,7 +29,7 @@
     </section>
 
     <footer>
-      <a href="{{ site.url | page.url }}" class="p-author h-card">Peter Goes</a>
+      <a href="{{ site.url + page.url }}" class="p-author h-card">Peter Goes</a>
     </footer>
   </article>
 
