Add reply name with given and family name

--- a/_includes/reply.njk
+++ b/_includes/reply.njk
@@ -29,7 +29,9 @@
     </section>
 
     <footer>
-      <a href="{{ site.url + page.url }}" class="p-author h-card">Peter Goes</a>
+      <a href="{{ site.url + page.url }}" class="p-author h-card">
+        <span class="p-given-name">Peter</span> <span class="p-family-name">Goes</span>
+      </a>
     </footer>
   </article>
 
